# Roche

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md  TODO.md  concurrent_queue.h  game.cpp  game.h  main.c  main.cpp  mat4.c  mat4.h  opengl.c  opengl.cpp  opengl.h  planet.c  planet.cpp  planet.h  quat.c  quat.h  resources.txt  spec.md  todo.md  util.c  util.cpp  util.h  vec3.c  vec3.h  vecmath.c  vecmath.h
config/: entities.sn  planets.sn  settings.sn
shaders/: atmo.frag  atmos.frag  atmos.vert  bloom_add.comp  bloom_add.frag  bloom_apply.comp  blur.frag  blur_h.comp  blur_w.comp  body.tesc  deferred.vert  downsample.comp  downsample.frag  flare.frag  flare.vert  gui.frag  gui.vert  header.shad  highpass.comp  highpass.frag  planet.frag  planet.tesc  planet.tese  planet.vert  planet_bare.frag  planet_deferred.frag  planet_forward.frag  planet_gbuffer.frag  post.vert  post_bloom_highpass.frag  post_default.frag  post_fxaa.frag  post_fxaa.vert  post_hdr.frag  resolve.comp  resolve.frag  ring.frag  ring.vert  sandbox.shad  skybox.frag  (+10 more)
shaun/: shaun.cpp  shaun.hpp  sweeper.cpp  sweeper.hpp
src/: CMakeLists.txt  concurrent_queue.h  dds_stream.cpp  dds_stream.hpp  ddsloader.cpp  ddsloader.hpp  entity.cpp  entity.hpp  fence.cpp  fence.hpp  flare.cpp  flare.hpp  game.cpp  game.h  game.hpp  gl_profiler.cpp  gl_profiler.hpp  gl_util.cpp  gl_util.hpp  gui.cpp  gui.hpp  gui_gl.cpp  gui_gl.hpp  main.cpp  mesh.cpp  mesh.hpp  opengl.cpp  opengl.h  planet.cpp  planet.h  planet.hpp  renderer.cpp  renderer.hpp  renderer_gl.cpp  renderer_gl.hpp  screenshot.cpp  screenshot.hpp  shader.cpp  shader.hpp  shader_pipeline.cpp  (+5 more)
tex/: credits.txt
